Migrate to go-kratos
