# core/bridge/api.bm.go
@@ -6,27 +6,53 @@ package api
 import (
 	"context"
 
-	bm "github.com/bilibili/kratos/pkg/net/http/blademaster"
-	"github.com/bilibili/kratos/pkg/net/http/blademaster/binding"
+	bm "github.com/go-kratos/kratos/pkg/net/http/blademaster"
+	"github.com/go-kratos/kratos/pkg/net/http/blademaster/binding"
+
+	google_protobuf1 "github.com/golang/protobuf/ptypes/empty"
 )
-import google_protobuf1 "github.com/golang/protobuf/ptypes/empty"
 
 // to suppressed 'imported but not used warning'
 var _ *bm.Context
 var _ context.Context
 var _ binding.StructValidator
 
+var PathBridgeGetInfo = "/xmux.base.bridge.v3.Bridge/GetInfo"
 var PathBridgeGetTimetable = "/v3/ac/timetable"
+var PathBridgeGetStudentAttendanceBriefs = "/v3/ac/attendance/briefs"
+var PathBridgeGetStudentAttendanceDetail = "/v3/ac/attendance/detail"
+var PathBridgeUpdateStudentAttendance = "/v3/ac/attendance/update"
 var PathBridgePing = "/xmux.base.bridge.v3.Bridge/Ping"
 
 // BridgeBMServer is the server API for Bridge service.
 type BridgeBMServer interface {
+	GetInfo(ctx context.Context, req *google_protobuf1.Empty) (resp *Info, err error)
+
+	// GetTimetable according to uid.
 	GetTimetable(ctx context.Context, req *google_protobuf1.Empty) (resp *GetTimetableResp, err error)
+
+	// GetStudentAttendanceBriefs for lecturer.
+	GetStudentAttendanceBriefs(ctx context.Context, req *GetStudentAttendanceBriefsReq) (resp *GetStudentAttendanceBriefsResp, err error)
+
+	// GetStudentAttendanceDetail for lecturer.
+	GetStudentAttendanceDetail(ctx context.Context, req *GetStudentAttendanceDetailReq) (resp *StudentAttendanceDetail, err error)
+
+	// UpdateStudentAttendance for lecturer.
+	UpdateStudentAttendance(ctx context.Context, req *UpdateStudentAttendanceReq) (resp *UpdateStudentAttendanceResp, err error)
 
 	Ping(ctx context.Context, req *google_protobuf1.Empty) (resp *google_protobuf1.Empty, err error)
 }
 
 var BridgeSvc BridgeBMServer
+
+func bridgeGetInfo(c *bm.Context) {
+	p := new(google_protobuf1.Empty)
+	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
+		return
+	}
+	resp, err := BridgeSvc.GetInfo(c, p)
+	c.JSON(resp, err)
+}
 
 func bridgeGetTimetable(c *bm.Context) {
 	p := new(google_protobuf1.Empty)
@@ -34,6 +60,33 @@ func bridgeGetTimetable(c *bm.Context) {
 		return
 	}
 	resp, err := BridgeSvc.GetTimetable(c, p)
+	c.JSON(resp, err)
+}
+
+func bridgeGetStudentAttendanceBriefs(c *bm.Context) {
+	p := new(GetStudentAttendanceBriefsReq)
+	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
+		return
+	}
+	resp, err := BridgeSvc.GetStudentAttendanceBriefs(c, p)
+	c.JSON(resp, err)
+}
+
+func bridgeGetStudentAttendanceDetail(c *bm.Context) {
+	p := new(GetStudentAttendanceDetailReq)
+	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
+		return
+	}
+	resp, err := BridgeSvc.GetStudentAttendanceDetail(c, p)
+	c.JSON(resp, err)
+}
+
+func bridgeUpdateStudentAttendance(c *bm.Context) {
+	p := new(UpdateStudentAttendanceReq)
+	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
+		return
+	}
+	resp, err := BridgeSvc.UpdateStudentAttendance(c, p)
 	c.JSON(resp, err)
 }
 
@@ -49,6 +102,10 @@ func bridgePing(c *bm.Context) {
 // RegisterBridgeBMServer Register the blademaster route
 func RegisterBridgeBMServer(e *bm.Engine, server BridgeBMServer) {
 	BridgeSvc = server
+	e.GET("/xmux.base.bridge.v3.Bridge/GetInfo", bridgeGetInfo)
 	e.GET("/v3/ac/timetable", bridgeGetTimetable)
+	e.GET("/v3/ac/attendance/briefs", bridgeGetStudentAttendanceBriefs)
+	e.GET("/v3/ac/attendance/detail", bridgeGetStudentAttendanceDetail)
+	e.POST("/v3/ac/attendance/update", bridgeUpdateStudentAttendance)
 	e.GET("/xmux.base.bridge.v3.Bridge/Ping", bridgePing)
 }
